--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>CoreUI - Open Source Bootstrap Admin Template</title>
+    <title>N57 Portal</title>
 
     <!-- Main styles for this application -->
     <link href="css/style.css" rel="stylesheet">
@@ -65,6 +65,7 @@
     <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
     <script src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
 
     <!-- AngularJS CoreUI App scripts -->
 
@@ -72,9 +73,9 @@
 
     <script src="js/routes.js"></script>
 
-    <script src="js/demo/routes.js"></script>
+     <script src="js/demo/routes.js"></script> 
 
-    <script src="js/controllers.js"></script>
+    <!-- <script src="js/controllers.js"></script> -->
     <script src="js/directives.js"></script>
 
 </body>
