--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- AngularJS -->
-    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular/angular.js"></script>
 
     <!-- AngularJS plugins -->
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
@@ -70,6 +70,8 @@
     <!-- AngularJS CoreUI App scripts -->
 
     <script src="js/app.js"></script>
+    <script src="shared/devApi.module.js"></script>
+    <script src="roster/roster.module.js"></script>
 
     <script src="js/routes.js"></script>
 
