Roster list functional, controller built for sailor details.  Ready for details view.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <script src="js/app.js"></script>
     <script src="shared/devApi.module.js"></script>
-    <script src="roster/roster.module.js"></script>
+    <script src="reports/roster/roster.module.js"></script>
 
     <script src="js/routes.js"></script>
 
