--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     <script src="js/app.js"></script>
     <script src="shared/devApi.module.js"></script>
     <script src="reports/roster/roster.module.js"></script>
+    <script src="accounts/accounts.module.js"></script>
 
     <script src="js/routes.js"></script>
 
