--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
     <!-- AngularJS CoreUI App scripts -->
 
     <script src="js/app.js"></script>
-    <script src="shared/devApi.module.js"></script>
-    <script src="reports/roster/roster.module.js"></script>
-    <script src="accounts/accounts.module.js"></script>
+    <script src="accounts/auth.module.js"></script>
+    <!-- <script src="shared/devApi.module.js"></script> -->
+    <!-- <script src="reports/roster/roster.module.js"></script> -->
+    <!-- <script src="accounts/accounts.module.js"></script>  -->
 
     <script src="js/routes.js"></script>
 
