--- a/accounts/login.html
+++ b/accounts/login.html
@@ -7,6 +7,9 @@
                         <div class="card-block">
                             <h1>Login</h1>
                             <p class="text-muted">Sign In to your account</p>
+                            <div data-ng-hide="message == ''" data-ng-class="(savedSuccessfully) ? 'alert alert-success' : 'alert alert-danger'">
+                                {{message}}
+                            </div>
                             <form role="form">
                                 <div class="input-group mb-3">
                                     <span class="input-group-addon"><i class="icon-user"></i>
@@ -25,9 +28,6 @@
                                     <div class="col-6 text-right">
                                         <button type="button" class="btn btn-link px-0">Forgot password?</button>
                                     </div>
-                                </div>
-                                <div data-ng-hide="message == ''">
-                                    {{message}}
                                 </div>
                             </form>
                         </div>
