--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
 
     <script src="js/app.js"></script>
     <script src="accounts/auth.module.js"></script>
-    <!-- <script src="shared/devApi.module.js"></script> -->
-    <!-- <script src="reports/roster/roster.module.js"></script> -->
+    <script src="shared/api.module.js"></script> 
+    <script src="reports/reports.module.js"></script> 
+    <script src="js/controllers/main.js"></script>
     <!-- <script src="accounts/accounts.module.js"></script>  -->
 
     <script src="js/routes.js"></script>
