Updates to project tracker

--- a/features/projects/newproject.html
+++ b/features/projects/newproject.html
@@ -1,7 +1,7 @@
 <h4>New Project</h4>
 <hr>
 <div>
-    <form class="form" role="form" name="newProjForm" ng-submit="project.submit()">
+    <form class="form" role="form" name="newProjForm">
         <label for="title" class="form-label">Project Title:</label>
         <input type="text" id="title" class="form-control" ng-model="project.new.title" required>
         <hr>
